# CineReserve

./: .env  .gitgnore  Dockerfile  docker-compose.yml  dump.sql  pyproject.toml
config/: asgi.py  redis.py  routing.py  settings.py  urls.py
movies/: models.py  pagination.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_remove_movie_duration_movie_duration_minutes_and_more.py
rooms/: models.py
rooms/migrations/: 0001_initial.py
seats/: models.py
seats/migrations/: 0001_initial.py
sessions/: apps.py  models.py  serializers.py  urls.py  views.py
sessions/migrations/: 0001_initial.py
tickets/: consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
tickets/management/commands/: listen_redis_expiration.py
tickets/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_full_name_customuser_username.py
